@@ -1,5 +1,9 @@
 2004-06-23  Bruno Haible  <bruno@clisp.org>
 
+	* places.lisp (def-setf-alias): New macro.
+
+2004-06-23  Bruno Haible  <bruno@clisp.org>
+
 	* defpackage.lisp (defpackage): Use (SETF PACKAGE-DOCUMENTATION).
 
 2004-06-22  Sam Steingold  <sds@gnu.org>
